# open62541

./: CMakeLists.txt  CPackConfig.cmake  CPackSourceConfig.cmake  Opc.Ua.AutoID.NodeSet2.xml  Opc.Ua.AutoID.Types.bsd  compile_commands.json  open62541.cbp  open62541Config.cmake  open62541Targets.cmake  optstructs.bsd  optstructs.csv  test.bsd  test.csv
.github/workflows/: build_linux.yml  doc_upload.yml
arch/: cmake_install.cmake  ua_network_tcp.c
arch/eCos/: cmake_install.cmake
arch/freertosLWIP/: cmake_install.cmake
arch/posix/: cmake_install.cmake  ua_architecture.h
arch/vxworks/: cmake_install.cmake
arch/wec7/: cmake_install.cmake
arch/win32/: cmake_install.cmake
debian/: changelog
doc/: CMakeLists.txt  cmake_install.cmake  tutorials.rst
doc_src/: conf.py
examples/: CMakeLists.txt  cmake_install.cmake  open62541-examples.cbp  tutorial_server_method.c
examples/async_operations/: client_async_api.c  client_method_async.c
examples/custom_datatype/: custom_datatype.h
examples/nodeset/: CMakeLists.txt  cmake_install.cmake  optStructs_test.c  optStructs_test.h  optional_fields.c  optional_type.h
examples/pubsub/: nodeRed_pubsub_measurement.json  pubsub_interrupt_loopback.c  pubsub_interrupt_loopback_st.c  pubsub_interrupt_publish.c  pubsub_interrupt_publisher.c  pubsub_interrupt_publisher_st.c  pubsub_plugfest_publish.c  server_pubsub_publisher_rt_level.c  start-pubsub_irq_publish.sh  tutorial_pubsub_publish.c  tutorial_pubsub_subscribe.c
include/: ua_config.h.in  ua_server_pubsub.h
include/open62541/: config.h.in  server_pubsub.h  types.h
plugins/crypto/mbedtls/: securitypolicy_mbedtls_common.c  ua_securitypolicy_aes128sha256rsaoaep.c  ua_securitypolicy_basic256sha256.c
plugins/networking/: ua_network_pubsub_udp.c
plugins/pubsub/: ua_pubsub_jobs_default.c  ua_pubsub_jobs_systemirq.c
src/: ua_securechannel.h  ua_types.c  ua_types_encoding_binary.c
src/pubsub/: ua_pubsub.c  ua_pubsub.h  ua_pubsub_custom_manager.c  ua_pubsub_manager.c  ua_pubsub_ns0.c  ua_pubsub_ns0.h  ua_pubsub_reader.c  ua_pubsub_writer.c
src/server/: ua_discovery.c  ua_server.c  ua_services_attribute.c  ua_services_method.c  ua_services_session.c  ua_subscription_events_filter.c
tests/: CMakeLists.txt
tests/pubsub/: check_pubsub_informationmodel.c
tools/cmake/: FindCheck.cmake
tools/nodeset_compiler/: backend_open62541_typedefinitions.py  type_parser.py
tools/packaging/: cmake_install.cmake
tools/schema/: Opc.Ua.NodeSet2.PubSubMinimal.xml  datatypes_pubsub.txt
